--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "nodeauth-challenge",
-  "version": "1.0.0",
-  "description": "Authentication Sprint Challenge",
-  "main": "index.js",
-  "scripts": {
-    "server": "nodemon index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LambdaSchool/Sprint-Challenge-Authentication.git"
-  },
-  "keywords": [],
-  "author": "Lambda School",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/LambdaSchool/Sprint-Challenge-Authentication/issues"
-  },
-  "homepage": "https://github.com/LambdaSchool/Sprint-Challenge-Authentication#readme",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "helmet": "^3.21.2",
-    "knex": "^0.20.4",
-    "sqlite3": "^4.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  }
+    "name": "node-auth1-project",
+    "version": "1.0.0",
+    "description": "Use `Node.js`, `Express` and `Knex` to build an API that provides **Register** and **Login** functionality using `SQLite` to store _User_ information. Make sure the password is not stored as plain text.",
+    "main": "index.js",
+    "scripts": {
+        "server": "nodemon index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/oofiksoo/node-auth1-project"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/oofiksoo/node-auth1-project"
+    },
+    "homepage": "https://github.com/oofiksoo/node-auth1-project.git",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "connect-session-knex": "^1.5.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "express-session": "^1.17.0",
+        "helmet": "^3.21.2",
+        "jsonwebtoken": "^8.5.1",
+        "knex": "^0.20.1",
+        "knex-cleaner": "^1.3.0",
+        "sqlite3": "^4.1.0"
+    },
+    "devDependencies": {
+        "nodemon": "^1.19.4"
+    }
 }
