--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/oofiksoo/node-auth1-project.git",
     "dependencies": {
+        "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
         "connect-session-knex": "^1.5.0",
         "cors": "^2.8.5",
