--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Use `Node.js`, `Express` and `Knex` to build an API that provides **Register** and **Login** functionality using `SQLite` to store _User_ information. Make sure the password is not stored as plain text.",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon index.js"
+        "server": "nodemon index.js",
+        "start": "node index.js",
+        "test": "cross-env DB_ENV=testing jest --watch"
     },
     "repository": {
         "type": "git",
@@ -22,13 +24,16 @@
         "bcryptjs": "^2.4.3",
         "connect-session-knex": "^1.5.0",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
         "helmet": "^3.21.2",
+        "jest": "^25.1.0",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.20.1",
         "knex-cleaner": "^1.3.0",
-        "sqlite3": "^4.1.0"
+        "sqlite3": "^4.1.0",
+        "supertest": "^4.0.2"
     },
     "devDependencies": {
         "nodemon": "^1.19.4"
